[package]
edition = "2021"
name = "esp32s3-uart-stability"
version = "0.1.0"

[[bin]]
name = "esp32s3-uart-stability"
path = "./src/bin/async_main.rs"

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  #"defmt",
] }

embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "defmt",
  "esp32s3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32s3", "unstable"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  #"defmt",
  "esp-alloc",
  "esp32s3",
  "wifi",
  "builtin-scheduler",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.4.0", features = [
  "generic-queue-8",
  "defmt-timestamp-uptime",
] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false


[patch.crates-io]
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "4d075751ae6cc697a15ca936a912351632a37c4c" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "4d075751ae6cc697a15ca936a912351632a37c4c" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal", rev = "4d075751ae6cc697a15ca936a912351632a37c4c" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "4d075751ae6cc697a15ca936a912351632a37c4c" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "4d075751ae6cc697a15ca936a912351632a37c4c" }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "4d075751ae6cc697a15ca936a912351632a37c4c" }
# esp-hal-embassy = { path = "../../esp-rs/esp-hal/esp-hal-embassy" }
# esp-hal = { path = "../../esp-rs/esp-hal/esp-hal" }
# esp-wifi = { path = "../../esp-rs/esp-hal/esp-wifi" }
# esp-alloc = { path = "../../esp-rs/esp-hal/esp-alloc" }
# esp-backtrace = { path = "../../esp-rs/esp-hal/esp-backtrace" }
# esp-println = { path = "../../esp-rs/esp-hal/esp-println" }
